--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+//    id 'com.herodevs.nes.springframework.boot' version '2.4.13-spring-boot-2.4.13k'
     id 'org.springframework.boot' version '2.5.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
@@ -15,16 +16,25 @@ sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://maven.pkg.github.com/neverendingsupport/spring-boot'
+        credentials {
+            username = System.getenv("GITHUB_USER")
+            password = System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-web:2.4.13-spring-boot-2.4.13k'
+    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-security:2.4.13-spring-boot-2.4.13k'
+    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-validation:2.4.13-spring-boot-2.4.13k'
+    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-data-jpa:2.4.13-spring-boot-2.4.13k'
 
     runtimeOnly 'com.h2database:h2'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-test:2.4.13-spring-boot-2.4.13k'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.mockito:mockito-inline:3.12.1'
 }
