--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-//    id 'com.herodevs.nes.springframework.boot' version '2.4.13-spring-boot-2.4.13k'
-    id 'org.springframework.boot' version '2.5.2'
+    id 'com.herodevs.nes.springframework.boot' version '2.4.13-spring-boot-2.4.13-trial'
+//    id 'org.springframework.boot' version '2.5.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'jacoco'
@@ -26,15 +26,13 @@ repositories {
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-web:2.4.13-spring-boot-2.4.13k'
-    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-security:2.4.13-spring-boot-2.4.13k'
-    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-validation:2.4.13-spring-boot-2.4.13k'
-    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-data-jpa:2.4.13-spring-boot-2.4.13k'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     runtimeOnly 'com.h2database:h2'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-test:2.4.13-spring-boot-2.4.13k'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.mockito:mockito-inline:3.12.1'
 }
