--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-//    id 'com.herodevs.nes.springframework.boot' version '2.4.13-spring-boot-2.4.13k'
-    id 'org.springframework.boot' version '2.5.2'
+    id 'com.herodevs.nes.springframework.boot' version '2.4.13-spring-boot-2.4.13k'
+//    id 'org.springframework.boot' version '2.5.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'jacoco'
