--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.herodevs.nes.springframework.boot' version '2.4.13-spring-boot-2.4.13k'
-//    id 'org.springframework.boot' version '2.5.2'
+    id 'com.herodevs.nes.springframework.boot' version '2.7.18-spring-boot-2.7.19g'
+//    id 'org.springframework.boot' version '2.7.18'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'jacoco'
@@ -27,14 +27,14 @@ repositories {
 
 dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-web:2.4.13-spring-boot-2.4.13k'
-    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-security:2.4.13-spring-boot-2.4.13k'
-    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-validation:2.4.13-spring-boot-2.4.13k'
-    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-data-jpa:2.4.13-spring-boot-2.4.13k'
+    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-web:2.7.18-spring-boot-2.7.19g'
+    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-security:2.7.18-spring-boot-2.7.19g'
+    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-validation:2.7.18-spring-boot-2.7.19g'
+    implementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-data-jpa:2.7.18-spring-boot-2.7.19g'
 
     runtimeOnly 'com.h2database:h2'
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-test:2.4.13-spring-boot-2.4.13k'
+    testImplementation 'com.herodevs.nes.springframework.boot:spring-boot-starter-test:2.7.18-spring-boot-2.7.19g'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.mockito:mockito-inline:3.12.1'
 }
