--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ security.allowedOrigins=http://localhost:3000,http://localhost:3001
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = com.enigmabridge.hibernate.dialect.SQLiteDialect
-spring.datasource.url=jdbc:sqlite:local.sqlite.db
+#spring.datasource.url=jdbc:sqlite:local.sqlite.db
+spring.datasource.url=jdbc:sqlite::memory:
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.username=
 spring.datasource.password=
