--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ security.allowedOrigins=http://localhost:3000,http://localhost:3001
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = com.enigmabridge.hibernate.dialect.SQLiteDialect
-#spring.datasource.url=jdbc:sqlite:local.sqlite.db
-spring.datasource.url=jdbc:sqlite::memory:
+spring.datasource.url=jdbc:sqlite:local.sqlite.db
+#spring.datasource.url=jdbc:sqlite::memory:
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.username=
 spring.datasource.password=
@@ -17,8 +17,8 @@ spring.sql.init.data-locations=classpath:data.sql
 spring.datasource.initialization-mode=always
 
 # Location of schema SQL files
-#spring.datasource.schema=classpath:schema.sql
+spring.datasource.schema=classpath:schema.sql
 
 # Location of data SQL files
-#spring.datasource.data=classpath:data.sql
+spring.datasource.data=classpath:data.sql
 
